Fix template to use start_date and end_date instead of check_in and check_out

--- a/templates/my_reservations.html
+++ b/templates/my_reservations.html
@@ -201,7 +201,7 @@
                     <div class="reservation-header">
                         <h3>{{ reservation.room.name }}</h3>
                         <span class="reservation-dates">
-                            Du {{ reservation.check_in.strftime('%d/%m/%Y') }} au {{ reservation.check_out.strftime('%d/%m/%Y') }}
+                            Du {{ reservation.start_date.strftime('%d/%m/%Y') }} au {{ reservation.end_date.strftime('%d/%m/%Y') }}
                         </span>
                     </div>
                     <div class="reservation-details">
