--- a/templates/make_reservation.html
+++ b/templates/make_reservation.html
@@ -59,13 +59,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="check_in">Date d'arrivée</label>
-                    <input type="date" id="check_in" name="check_in" required>
+                    <label for="start_date">Date d'arrivée</label>
+                    <input type="date" id="start_date" name="start_date" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="check_out">Date de départ</label>
-                    <input type="date" id="check_out" name="check_out" required>
+                    <label for="end_date">Date de départ</label>
+                    <input type="date" id="end_date" name="end_date" required>
                 </div>
 
                 <div class="form-group">
