Update hero image source to use direct URL

--- a/templates/home.html
+++ b/templates/home.html
@@ -379,7 +379,7 @@
     </header>
 
     <div class="hero-section">
-        <img src="{{ url_for('static', filename='images/noirmoutier-aerial.jpg') }}" alt="Vue aérienne de Noirmoutier" class="hero-image">
+        <img src="https://raw.githubusercontent.com/sebb34/Noirmoutier/master/static/images/noirmoutier-aerial.jpg" alt="Vue aérienne de Noirmoutier" class="hero-image">
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Maison Bourrut à Noirmoutier</h1>
